--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_mobx: ^2.0.6+5
+  mobx: ^2.2.0
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.3
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.3.0
 
 flutter:
   uses-material-design: true
