--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   mobx: ^2.2.0
   get_it: ^7.6.4
   shared_preferences: ^2.2.1
+  firebase_core: ^2.16.0
+  firebase_database: ^10.2.6
 
 dev_dependencies:
   flutter_test:
