--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.2.1
   firebase_core: ^2.16.0
   firebase_database: ^10.2.6
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
