--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2 # Only works with v2
+      - run: flutter build web --dart-define-from-file=env.prd.json
+      
       - uses: subosito/flutter-action@v1
-      - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /planning_poker_clone/
-      - run: flutter build web --dart-define-from-file=env.prd.json
+
+      - name: Publish Gh-Page
+      - uses: bluefireteam/flutter-gh-pages@v7
+
+      
