--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /planning_poker_clone/
-          API_KEY: ${{ secrets.API_KEY }}
-          APP_ID: ${{ secrets.APP_ID }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          STORAGE_BUCKET: ${{ secrets.STORAGE_BUCKET }}
-          MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
-
-
-
+      - run: flutter build web --release --dart-define=API_KEY=${{secrets.API_KEY}} --dart-define=APP_ID=${{secrets.APP_ID}} --dart-define=DATABASE_URL=${{secrets.DATABASE_URL}} --dart-define=STORAGE_BUCKET=${{ secrets.STORAGE_BUCKET }} --dart-define=MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}
