--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
       - run: flutter pub get
       - run: flutter build web --release --web-renderer=auto --base-href /planning_poker_clone/ --dart-define=API_KEY=${{secrets.API_KEY}} --dart-define=APP_ID=${{secrets.APP_ID}} --dart-define=DATABASE_URL=${{secrets.DATABASE_URL}} --dart-define=STORAGE_BUCKET=${{ secrets.STORAGE_BUCKET }} --dart-define=MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }} --web-renderer=auto --base-href /planning_poker_clone/ 
 
-      - name: Deploy Gh-Pages
-      - run:  git config user.name github-actions
-      - run:  git config user.email github-actions@github.com
-      - run:  git --work-tree build/web add --all
-      - run:  git commit -m "Automatic deployment by github-actions"
-      - run:  git push origin HEAD:gh-pages --force
+      # - name: Deploy Gh-Pages
+      # - run:  git config user.name github-actions
+      # - run:  git config user.email github-actions@github.com
+      # - run:  git --work-tree build/web add --all
+      # - run:  git commit -m "Automatic deployment by github-actions"
+      # - run:  git push origin HEAD:gh-pages --force
